tests/NormalTests/paczka1/fuzzy1/29466539.err
Error in line 4: iStd3TB6J A777 11,0
Error in line 7: iStd3TB6J A176 16,8
Error in line 12: iStd3TB6J A777 7,8
Error in line 28: SSGfKqMXKj A777 4,9
